@@ -1,14 +1,12 @@
 package com.yosh.coding.artificalIntelligence.skill;
 
+import cn.hutool.core.util.StrUtil;
 import cn.hutool.json.JSONObject;
-import com.yosh.model.constants.AppConstant;
 import dev.langchain4j.agent.tool.P;
 import dev.langchain4j.agent.tool.Tool;
 
-import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class DeleteFile  extends BaseTool{
     private final Long appId;
@@ -23,11 +21,20 @@ public class DeleteFile  extends BaseTool{
     public String deleteFile(@P("相对路径")String relativePath,
                              @P("文件名")String fileName) {
         try{
+            if (StrUtil.isBlank(fileName)) {
+                return "wrong: 文件名不能为空";
+            }
+            Path fileNamePath = Path.of(fileName);
+            if (fileNamePath.isAbsolute() || fileNamePath.getNameCount() != 1) {
+                return "wrong: 文件名不能包含路径";
+            }
             if(isImportantFile(fileName)){
                 return "wrong: 不能删除重要文件";
             }
-            String projectName = AppConstant.VUE_PREFIX + "_" + appId + "_" + version;
-            Path path = Paths.get(AppConstant.getCodingServerDir(), projectName, relativePath, fileName);
+            String targetPath = StrUtil.isBlank(relativePath)
+                    ? fileName
+                    : Path.of(relativePath, fileName).toString();
+            Path path = resolveProjectPath(appId, version, targetPath);
             if(!Files.exists(path)){
                 return "wrong: 文件不存在";
             }
@@ -36,8 +43,8 @@ public class DeleteFile  extends BaseTool{
             }
             Files.delete(path);
             return "success: 文件删除成功";
-        } catch (IOException e) {
-           return "wrong: 删除文件时出错";
+        } catch (Exception e) {
+           return "wrong: 删除文件时出错: " + e.getMessage();
         }
     }
 
